--- a/NEWS
+++ b/NEWS
@@ -352,7 +352,7 @@ BUGFIXES:
 337 ==> 205806 - Geolocation placemarks for digiKam.
 338 ==> 158734 - Feature Request: Ability to save commonly used GPS coordinates.
 339 ==> 154209 - In geolocalization editor, save a location by name, to reuse later.
-340 ==> 
+340 ==> 246077 - GPS Coordinates from some images not detected.
 341 ==> 
 342 ==> 
 343 ==> 
