--- a/NEWS
+++ b/NEWS
@@ -354,13 +354,23 @@ BUGFIXES:
 339 ==> 154209 - In geolocalization editor, save a location by name, to reuse later.
 340 ==> 246077 - GPS Coordinates from some images not detected.
 341 ==> 233848 - Use wikimapia.org to display the map in the coordinates editor.
-342 ==> 
-343 ==> 
-344 ==> 
-345 ==> 
-346 ==> 
-347 ==> 
-348 ==> 
-349 ==> 
-350 ==> 
-351 ==> 
+342 ==> 244914 - digiKam crashes on startup.
+343 ==> 190476 - Hard-wired dependency on Marble.
+344 ==> 196678 - Made the old style world map available when Marble is not available.
+345 ==> 267525 - digiKam crashes on every startup.
+346 ==> 264875 - digiKam crashes at startup.
+347 ==> 220288 - digiKam crashes at startup [mem2chunk_check, free_check, Marble::GeoDataObject::~GeoDataObject].
+348 ==> 289130 - digiKam crashing when moving globe in marble widget.
+349 ==> 234406 - digiKam crashes at startup - can't see any specific reason why this happens.
+350 ==> 233761 - digiKam crashes in the starting phase.
+351 ==> 244296 - digiKam crashes on startup.
+352 ==> 233166 - Crash on startup undefined symbol: _ZN6Marble12MarbleWidget11changeEventEP6QEvent.
+353 ==> 
+354 ==> 
+355 ==> 
+356 ==> 
+357 ==> 
+358 ==> 
+359 ==> 
+360 ==> 
+361 ==> 
