--- a/NEWS
+++ b/NEWS
@@ -365,12 +365,32 @@ BUGFIXES:
 350 ==> 233761 - digiKam crashes in the starting phase.
 351 ==> 244296 - digiKam crashes on startup.
 352 ==> 233166 - Crash on startup undefined symbol: _ZN6Marble12MarbleWidget11changeEventEP6QEvent.
-353 ==> 
-354 ==> 
-355 ==> 
+353 ==> 261095 - Edit coordinates function should use Openstreetmap.
+354 ==> 246924 - [enhancement] add openstreetmap in gpssync.
+355 ==> 237851 - The GPSsync tool should support OpenStreetMap.
 356 ==> 
 357 ==> 
 358 ==> 
 359 ==> 
 360 ==> 
 361 ==> 
+362 ==> 
+363 ==> 
+364 ==> 
+365 ==> 
+366 ==> 
+367 ==> 
+368 ==> 
+369 ==> 
+370 ==> 
+371 ==> 
+372 ==> 
+373 ==> 
+374 ==> 
+375 ==> 
+376 ==> 
+377 ==> 
+378 ==> 
+379 ==> 
+380 ==> 
+381 ==> 
