--- a/NEWS
+++ b/NEWS
@@ -400,7 +400,7 @@ BUGFIXES:
 385 ==> 301537 - Wish: blank space to copy a path to.
 386 ==> 313508 - digiKam crashed.
 387 ==> 100894 - Crash when entering Image Editor.
-388 ==> 
+388 ==> 248037 - Making a new database.
 389 ==> 
 390 ==> 
 391 ==> 
