--- a/NEWS
+++ b/NEWS
@@ -403,7 +403,7 @@ BUGFIXES:
 388 ==> 248037 - Making a new database.
 389 ==> 396305 - Being able to find which files which doesn't already have author, copyright, and locations tags.
 390 ==> 399506 - Integrations with FS and Internet browser.
-391 ==> 
+391 ==> 437193 - Starting Digikam with defined search.
 392 ==> 
 393 ==> 
 394 ==> 
