--- a/NEWS
+++ b/NEWS
@@ -451,10 +451,10 @@ BUGFIXES:
 436 ==> 184639 - can not save an image twice.
 437 ==> 324640 - After defining a section of a pic, and the attempt of saving this _section_ : will not work.
 438 ==> 094107 - Flipping Function in Image Editor is interchanged.
-439 ==> 
-440 ==> 
-441 ==> 
-442 ==> 
+439 ==> 119253 - image editor's undo is broken.
+440 ==> 087105 - wish: undo function in editor.
+441 ==> 121307 - Easy undo/redo with key pressed.
+442 ==> 255010 - Undo crash in digiKam Editor.
 443 ==> 
 444 ==> 
 445 ==> 
