--- a/NEWS
+++ b/NEWS
@@ -462,9 +462,9 @@ BUGFIXES:
 447 ==> 263957 - Change date is written in "production date" instead of in "Changed".
 448 ==> 247141 - Unreasonable long working time when writing "Metadata in Files".
 449 ==> 283013 - Accelerating writing metadata back to image files.
-450 ==> 
-451 ==> 
-452 ==> 
+450 ==> 142564 - digiKam-signature in iptc and exif tags.
+451 ==> 113167 - Crash when getting EXIF information.
+452 ==> 097730 - EXIF Information unavailable in Camera preview window.
 453 ==> 
 454 ==> 
 455 ==> 
@@ -474,4 +474,13 @@ BUGFIXES:
 459 ==> 
 460 ==> 
 461 ==> 
-
+462 ==> 
+463 ==> 
+464 ==> 
+465 ==> 
+466 ==> 
+467 ==> 
+468 ==> 
+469 ==> 
+470 ==> 
+471 ==> 
