--- a/NEWS
+++ b/NEWS
@@ -482,5 +482,24 @@ BUGFIXES:
 467 ==> 426284 - Cannot build digiKam using Craft on Windows 10. "ninja: error: 'opencv_imgcodecs-NOTFOUND'".
 468 ==> 403209 - Not able to find print assistant.
 469 ==> 395217 - Albums in tree view do not stay collapsed.
-470 ==> 
+470 ==> 448120 - App Crashes all the time.
 471 ==> 
+472 ==> 
+473 ==> 
+474 ==> 
+475 ==> 
+476 ==> 
+477 ==> 
+478 ==> 
+479 ==> 
+480 ==> 
+481 ==> 
+482 ==> 
+483 ==> 
+484 ==> 
+485 ==> 
+486 ==> 
+487 ==> 
+488 ==> 
+489 ==> 
+490 ==> 
