--- a/NEWS
+++ b/NEWS
@@ -483,8 +483,8 @@ BUGFIXES:
 468 ==> 403209 - Not able to find print assistant.
 469 ==> 395217 - Albums in tree view do not stay collapsed.
 470 ==> 448120 - App Crashes all the time.
-471 ==> 
-472 ==> 
+471 ==> 426971 - Image editor sometimes hangs when closed via the window close button.
+472 ==> 437912 - Similarity-Duplicates digiKam closes unexpectedly.
 473 ==> 
 474 ==> 
 475 ==> 
