--- a/NEWS
+++ b/NEWS
@@ -487,7 +487,7 @@ BUGFIXES:
 472 ==> 437912 - Similarity-Duplicates digiKam closes unexpectedly.
 473 ==> 372047 - Switch from DK4 to DK5 fails: collection path contains %2F instead of /.
 474 ==> 379415 - digiKam collection location string format in 5.X different to 4.X.
-475 ==> 
+475 ==> 370029 - Black and white low resolution print only.
 476 ==> 
 477 ==> 
 478 ==> 
