--- a/NEWS
+++ b/NEWS
@@ -488,7 +488,7 @@ BUGFIXES:
 473 ==> 372047 - Switch from DK4 to DK5 fails: collection path contains %2F instead of /.
 474 ==> 379415 - digiKam collection location string format in 5.X different to 4.X.
 475 ==> 370029 - Black and white low resolution print only.
-476 ==> 
+476 ==> 365745 - AdobeRGB Input Profile cannot be found or used.
 477 ==> 
 478 ==> 
 479 ==> 
