--- a/NEWS
+++ b/NEWS
@@ -489,7 +489,7 @@ BUGFIXES:
 474 ==> 379415 - digiKam collection location string format in 5.X different to 4.X.
 475 ==> 370029 - Black and white low resolution print only.
 476 ==> 365745 - AdobeRGB Input Profile cannot be found or used.
-477 ==> 
+477 ==> 359959 - Filter panel from right sidebar requires too much horizontal space.
 478 ==> 
 479 ==> 
 480 ==> 
