--- a/NEWS
+++ b/NEWS
@@ -492,7 +492,7 @@ BUGFIXES:
 477 ==> 359959 - Filter panel from right sidebar requires too much horizontal space.
 478 ==> 418163 - No dark theme properly shows partly selected captions.
 479 ==> 431096 - Adding new collection scans all existing collections for new items.
-480 ==> 
+480 ==> 436625 - Face detection: Unchecking "Work on all processor cores" still uses all cpu cores.
 481 ==> 
 482 ==> 
 483 ==> 
