--- a/NEWS
+++ b/NEWS
@@ -495,7 +495,7 @@ BUGFIXES:
 480 ==> 436625 - Face detection: Unchecking "Work on all processor cores" still uses all cpu cores.
 481 ==> 278975 - Geolocation no longer looks up altitude automatically.
 482 ==> 315603 - Light table should keep settings between 2 sessions.
-483 ==> 
+483 ==> 327254 - ACL default mask is ignored or mask is changed for image editor and batch queue manager.
 484 ==> 
 485 ==> 
 486 ==> 
