--- a/NEWS
+++ b/NEWS
@@ -498,7 +498,7 @@ BUGFIXES:
 483 ==> 327254 - ACL default mask is ignored or mask is changed for image editor and batch queue manager.
 484 ==> 441171 - File Import can only select directories, no single files.
 485 ==> 440465 - Opening folder just opens the last folder, you cant open folder with other folders, like a tree.
-486 ==> 
+486 ==> 426678 - Drag and Drop to other windows application.
 487 ==> 
 488 ==> 
 489 ==> 
