--- a/NEWS
+++ b/NEWS
@@ -499,7 +499,7 @@ BUGFIXES:
 484 ==> 441171 - File Import can only select directories, no single files.
 485 ==> 440465 - Opening folder just opens the last folder, you cant open folder with other folders, like a tree.
 486 ==> 426678 - Drag and Drop to other windows application.
-487 ==> 
+487 ==> 431005 - Paste decimal coordinates fails.
 488 ==> 
 489 ==> 
 490 ==> 
