--- a/NEWS
+++ b/NEWS
@@ -500,7 +500,7 @@ BUGFIXES:
 485 ==> 440465 - Opening folder just opens the last folder, you cant open folder with other folders, like a tree.
 486 ==> 426678 - Drag and Drop to other windows application.
 487 ==> 431005 - Paste decimal coordinates fails.
-488 ==> 
+488 ==> 439779 - The rating and color specified outside digiKam are not updated for all sidecar file settings.
 489 ==> 
 490 ==> 
 491 ==> 
