--- a/NEWS
+++ b/NEWS
@@ -502,7 +502,7 @@ BUGFIXES:
 487 ==> 431005 - Paste decimal coordinates fails.
 488 ==> 439779 - The rating and color specified outside digiKam are not updated for all sidecar file settings.
 489 ==> 425449 - Right-click geolocation context menu not working when using Google Maps.
-490 ==> 
+490 ==> 417739 - Multirow + "tag block" display for image tags?
 491 ==> 
 492 ==> 
 493 ==> 
