--- a/NEWS
+++ b/NEWS
@@ -504,7 +504,7 @@ BUGFIXES:
 489 ==> 425449 - Right-click geolocation context menu not working when using Google Maps.
 490 ==> 417739 - Multirow + "tag block" display for image tags?
 491 ==> 427203 - Asan error on closing digiKam.
-492 ==> 
+492 ==> 424771 - Image disappears when performing wavelet smoothing in GMicQt.
 493 ==> 
 494 ==> 
 495 ==> 
