--- a/NEWS
+++ b/NEWS
@@ -505,7 +505,7 @@ BUGFIXES:
 490 ==> 417739 - Multirow + "tag block" display for image tags?
 491 ==> 427203 - Asan error on closing digiKam.
 492 ==> 424771 - Image disappears when performing wavelet smoothing in GMicQt.
-493 ==> 
+493 ==> 425359 - First face tag moves intermittently.
 494 ==> 
 495 ==> 
 496 ==> 
