--- a/NEWS
+++ b/NEWS
@@ -510,7 +510,7 @@ BUGFIXES:
 495 ==> 406255 - Geolocalisation is lost when photos from Google photos is imported in digiKam.
 496 ==> 400187 - Export to google photo in an existing album: bad request.
 497 ==> 398885 - Collections on removable media does not work.
-498 ==> 
+498 ==> 398126 - Group feature works across albums (undesired behaviour?)
 499 ==> 
 500 ==> 
 501 ==> 
