--- a/NEWS
+++ b/NEWS
@@ -512,7 +512,7 @@ BUGFIXES:
 497 ==> 398885 - Collections on removable media does not work.
 498 ==> 398126 - Group feature works across albums (undesired behaviour?)
 499 ==> 397901 - Work-around for maximum number of images in an album.
-500 ==> 
+500 ==> 389686 - People tag with frame get multiplied when image is resized.
 501 ==> 
 502 ==> 
 503 ==> 
