--- a/NEWS
+++ b/NEWS
@@ -515,7 +515,7 @@ BUGFIXES:
 500 ==> 389686 - People tag with frame get multiplied when image is resized.
 501 ==> 376438 - Several i18n and RTL-layout issues.
 502 ==> 386684 - How to setup a collection with different hard drives.
-503 ==> 
+503 ==> 381928 - How to delete albums without question.
 504 ==> 
 505 ==> 
 506 ==> 
