--- a/NEWS
+++ b/NEWS
@@ -519,7 +519,7 @@ BUGFIXES:
 504 ==> 381906 - IPTC & XMP Metadata are not stored into database as described in the digiKam Handbook.
 505 ==> 381591 - Rating a photo steals focus from image viewer & arrow keys.
 506 ==> 380968 - Separate the fields.
-507 ==> 
+507 ==> 378601 - Window opens in full screen.
 508 ==> 
 509 ==> 
 510 ==> 
