--- a/NEWS
+++ b/NEWS
@@ -520,7 +520,7 @@ BUGFIXES:
 505 ==> 381591 - Rating a photo steals focus from image viewer & arrow keys.
 506 ==> 380968 - Separate the fields.
 507 ==> 378601 - Window opens in full screen.
-508 ==> 
+508 ==> 378115 - Upgrades lose custom toolbars.
 509 ==> 
 510 ==> 
 511 ==> 
