--- a/NEWS
+++ b/NEWS
@@ -522,7 +522,7 @@ BUGFIXES:
 507 ==> 378601 - Window opens in full screen.
 508 ==> 378115 - Upgrades lose custom toolbars.
 509 ==> 377890 - DBThumbnailsVersion does not exist error.
-510 ==> 
+510 ==> 376091 - Image Editor: how to place a signature at right bottom corner?
 511 ==> 
 512 ==> 
 513 ==> 
