--- a/NEWS
+++ b/NEWS
@@ -524,7 +524,7 @@ BUGFIXES:
 509 ==> 377890 - DBThumbnailsVersion does not exist error.
 510 ==> 376091 - Image Editor: how to place a signature at right bottom corner?
 511 ==> 376072 - Cursor icon is hand most of the time even if the map is not in panning mode.
-512 ==> 
+512 ==> 375886 - Search albums, include sub-tree shows all photos.
 513 ==> 
 514 ==> 
 515 ==> 
