--- a/NEWS
+++ b/NEWS
@@ -526,7 +526,7 @@ BUGFIXES:
 511 ==> 376072 - Cursor icon is hand most of the time even if the map is not in panning mode.
 512 ==> 375886 - Search albums, include sub-tree shows all photos.
 513 ==> 375883 - Continuous processing after the progress bar finishes.
-514 ==> 
+514 ==> 374476 - Exporting to Google Photos changes File modified timestamp.
 515 ==> 
 516 ==> 
 517 ==> 
