--- a/NEWS
+++ b/NEWS
@@ -527,7 +527,7 @@ BUGFIXES:
 512 ==> 375886 - Search albums, include sub-tree shows all photos.
 513 ==> 375883 - Continuous processing after the progress bar finishes.
 514 ==> 374476 - Exporting to Google Photos changes File modified timestamp.
-515 ==> 
+515 ==> 362132 - Cannot connect to smb shared collection.
 516 ==> 
 517 ==> 
 518 ==> 
