--- a/NEWS
+++ b/NEWS
@@ -534,7 +534,7 @@ BUGFIXES:
 519 ==> 278331 - SETUP : digiKam does not access files on NAS.
 520 ==> 243205 - SETUP : adding NFS4 network location to local library sees only some dirs.
 521 ==> 232391 - PRINT : scaling images is broken.
-522 ==> 
+522 ==> 234078 - Geolocation tab from right sidebar : hide MapView for image without coordinates.
 523 ==> 
 524 ==> 
 525 ==> 
