--- a/NEWS
+++ b/NEWS
@@ -535,7 +535,7 @@ BUGFIXES:
 520 ==> 243205 - SETUP : adding NFS4 network location to local library sees only some dirs.
 521 ==> 232391 - PRINT : scaling images is broken.
 522 ==> 234078 - Geolocation tab from right sidebar : hide MapView for image without coordinates.
-523 ==> 
+523 ==> 416214 - When entering a name in an unconfirmed face, sometimes the keypress acts as a shortcut and jumps to another picture.
 524 ==> 
 525 ==> 
 526 ==> 
