--- a/NEWS
+++ b/NEWS
@@ -540,7 +540,7 @@ BUGFIXES:
 525 ==> 230553 - Keys {unique} and [cam] produce strange results on importing from a flash memory card.
 526 ==> 210912 - Opening left side bar from Light Table rescales left image but not the right one.
 527 ==> 210198 - Copyright and Right Usage information in Settings are not saved in template file.
-528 ==> 
+528 ==> 194777 - Synchronize images with database does not update all images if there are a lot of images in one album.
 529 ==> 
 530 ==> 
 531 ==> 
