--- a/NEWS
+++ b/NEWS
@@ -542,7 +542,7 @@ BUGFIXES:
 527 ==> 210198 - Copyright and Right Usage information in Settings are not saved in template file.
 528 ==> 194777 - Synchronize images with database does not update all images if there are a lot of images in one album.
 529 ==> 410275 - Tag list disappear when drag and dropping tag to top of the list.
-530 ==> 
+530 ==> 226023 - Support additional file formats (pdf, svg ...).
 531 ==> 
 532 ==> 
 533 ==> 
