--- a/NEWS
+++ b/NEWS
@@ -578,7 +578,7 @@ BUGFIXES:
 563 ==> 261634 - Test - I'll delete it again!
 564 ==> 132974 - Deleting albums does not remove them from the album tree view.
 565 ==> 179534 - Crash when deleting album.
-566 ==> 
+566 ==> 338647 - GROUP : assemble files by format shows two groups of RAW files instead of one.
 567 ==> 
 568 ==> 
 569 ==> 
